# StudyStreak

./: .gitignore  PRIVACY.md  README.md  main.py  pyproject.toml  requirements.txt  study_data.json
.github/workflows/: publish.yml
backend/: auth.py  database.py  main.py  models.py  schemas.py
chrome_extension/: background.js  focus_overlay.js  manifest.firefox.json  manifest.json  popup.css  popup.html  popup.js  strict_focus_blocked.html  strict_focus_blocked.js
scripts/: build_firefox_extension.py
studystreak/: accounts.py  api_client.py  app.tcss  auth_cache.py  cli.py  notification.py  paths.py  profile_sync.py  security.py  session.py  storage.py  ui.py
tests/: test_app_paths.py  test_streak_storage.py
